<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_query_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
  >

    <EditText
        android:id="@+id/search_query_term_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/search_query_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_query_details"/>

    <GridLayout
        android:id="@+id/date_query_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:stretchMode="columnWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_query_term_edit_text"
        app:layout_constraintBottom_toTopOf="@id/checkbox_grid">

        <LinearLayout
            android:id="@+id/date_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_date_title" />

            <TextView
                android:id="@+id/start_date_et"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="188dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_title" />

            <TextView
                android:id="@+id/end_date_et"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="188dp" />

        </LinearLayout>
    </GridLayout>

    <GridLayout
        android:id="@+id/checkbox_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:numColumns="2"
        android:padding="4dp"
        android:stretchMode="spacingWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_query_details"
        app:layout_constraintBottom_toTopOf="@id/start_search_btn">

        <CheckBox
            android:id="@+id/checkbox_arts"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/arts_checkbox_txt"
            />

        <CheckBox
            android:id="@+id/checkbox_business"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/business_checkbox_txt"
            />

        <CheckBox
            android:id="@+id/checkbox_entreprenuers"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/entreprenuers_checkbox_txt"
            />

        <CheckBox
            android:id="@+id/checkbox_politics"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/politics_checkbox_txt"
            />

        <CheckBox
            android:id="@+id/checkbox_sports"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/sports_checkbox_txt"
            />

        <CheckBox
            android:id="@+id/checkbox_travel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/travel_checkbox_txt"
            />

    </GridLayout>

    <Button
        android:id="@+id/start_search_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        android:layout_marginBottom="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_grid"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>