<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/results_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".search.controller.SearchActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/search_circular_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="40dp"
        app:trackThickness="4dp"
        app:trackColor="@color/design_default_color_secondary"
        app:indicatorColor="@color/design_default_color_on_secondary"
        app:showAnimationBehavior="outward"
        app:flow_verticalAlign="center"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>