<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/design_default_color_secondary"
    android:id="@+id/menu_layout">

    <item
        android:id="@+id/menu_search_btn"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_btn"
        app:showAsAction="always"
        />


    <item android:id="@+id/notifications_btn"
        android:title="@string/notifications"
        app:showAsAction="never"/>
    <item android:id="@+id/help_btn"
        android:title="@string/help"
        app:showAsAction="never"/>
    <item android:id="@+id/about_btn"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item android:id="@+id/home_btn"
        android:title="@string/home_btn"
        app:showAsAction="never"/>

</menu>